# computer_vision

./: .gitignore  Lab1 - Фильтрация изображения.ipynb  descriptor_phpDWi1Qn.pickle  exercise1.ipynb  exercise2.ipynb  exercise3.ipynb  exercise4.ipynb  exercise5.ipynb  exercise6.ipynb  exercise6_fusion.ipynb  math_websecurity.md  my_vgg.ipynb  pyproject.toml  test.py
